// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrides Menu.Item.Content.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Menu.Item.ContentText.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Menu.Item.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Menu.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with addon component (left) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <div
        class="css-view-1dbjc4n"
        style="background-color: rgb(59, 130, 246); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Settings
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <div
        class="css-view-1dbjc4n"
        style="background-color: rgb(239, 68, 68); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <div
        class="css-view-1dbjc4n"
        style="background-color: rgb(245, 158, 11); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <div
        class="css-view-1dbjc4n"
        style="background-color: rgb(124, 58, 237); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with addon component (right) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Settings
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <div
          class="css-view-1dbjc4n"
          style="background-color: rgb(59, 130, 246); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <div
          class="css-view-1dbjc4n"
          style="background-color: rgb(239, 68, 68); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <div
          class="css-view-1dbjc4n"
          style="background-color: rgb(245, 158, 11); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <div
          class="css-view-1dbjc4n"
          style="background-color: rgb(124, 58, 237); border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with disabled items 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    aria-disabled="true"
    class="css-view-1dbjc4n"
    style="flex-direction: row; padding-left: 16px; width: 100%;"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; opacity: 0.5; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with dividers 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with icons (left) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <svg
        colorMode="default"
        height="16"
        icon="solid-cogs"
        size="200"
        style="color: rgb(87, 79, 235); display: flex;"
        viewBox="0 0 0 0"
        width="16"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Settings
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <svg
        colorMode="default"
        height="16"
        icon="solid-users"
        size="200"
        style="color: rgb(87, 79, 235); display: flex;"
        viewBox="0 0 0 0"
        width="16"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <svg
        colorMode="default"
        height="16"
        icon="solid-exclamation-triangle"
        size="200"
        style="color: rgb(87, 79, 235); display: flex;"
        viewBox="0 0 0 0"
        width="16"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="align-items: center; justify-content: center; margin-right: 16px;"
    >
      <svg
        colorMode="default"
        height="16"
        icon="solid-lock"
        size="200"
        style="color: rgb(87, 79, 235); display: flex;"
        viewBox="0 0 0 0"
        width="16"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with icons (right) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Settings
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <svg
          colorMode="default"
          height="16"
          icon="solid-cogs"
          size="200"
          style="color: rgb(87, 79, 235); display: flex;"
          viewBox="0 0 0 0"
          width="16"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <svg
          colorMode="default"
          height="16"
          icon="solid-users"
          size="200"
          style="color: rgb(87, 79, 235); display: flex;"
          viewBox="0 0 0 0"
          width="16"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <svg
          colorMode="default"
          height="16"
          icon="solid-exclamation-triangle"
          size="200"
          style="color: rgb(87, 79, 235); display: flex;"
          viewBox="0 0 0 0"
          width="16"
        />
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; justify-content: center; margin-left: 16px;"
      >
        <svg
          colorMode="default"
          height="16"
          icon="solid-lock"
          size="200"
          style="color: rgb(87, 79, 235); display: flex;"
          viewBox="0 0 0 0"
          width="16"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with no left padding 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 16px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 16px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="border-bottom-color: rgba(230,230,235,1.00); border-bottom-width: 1px; flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 16px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 16px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with static items 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: unset; flex-direction: row; padding-left: 16px; width: 100%;"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Menu.Item.Content.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(239, 68, 68); flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Menu.Item.ContentText.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Menu.Item.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 255, 255); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Menu.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; overflow-x: hidden; overflow-y: hidden;"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        General
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Accounts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Alerts
      </div>
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; flex-direction: row; padding-left: 16px; width: 100%;"
    tabindex="0"
  >
    <div
      class="css-view-1dbjc4n"
      style="flex-direction: row; justify-content: space-between; padding: 16px 16px 16px 0px; width: 100%;"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="color: rgb(22, 30, 46); font-size: 16px; font-weight: 500;"
      >
        Security
      </div>
    </div>
  </div>
</div>
`;
